crates/ndc-postgres/tests/snapshots/tests__aggregate_count_albums.snap
---
source: crates/ndc-postgres/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "avg_artist_id": {
          "value": 121.94236311239192
        },
        "how_many_albums": {
          "value": 347
        },
        "how_many_artist_ids": {
          "value": 347
        },
        "how_many_distinct_artist_ids": {
          "value": 204
        },
        "max_artist_id": {
          "value": 275
        },
        "min_artist_id": {
          "value": 1
        }
      }
    ]
  }
]
