crates/ndc-postgres/tests/snapshots/tests__select_5.snap
---
source: crates/ndc-postgres/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": {
          "value": "Let There Be Rock"
        }
      },
      {
        "Title": {
          "value": "Big Ones"
        }
      },
      {
        "Title": {
          "value": "Jagged Little Pill"
        }
      },
      {
        "Title": {
          "value": "Facelift"
        }
      },
      {
        "Title": {
          "value": "Warner 25 Anos"
        }
      }
    ]
  }
]
