crates/ndc-postgres/tests/snapshots/tests__select_by_pk.snap
---
source: crates/ndc-postgres/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": {
          "value": "Garage Inc. (Disc 1)"
        }
      }
    ]
  }
]
