crates/ndc-postgres/tests/snapshots/tests__select_int_and_string.snap
---
source: crates/ndc-postgres/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": {
          "value": 35
        },
        "title": {
          "value": "Garage Inc. (Disc 1)"
        }
      }
    ]
  }
]
