crates/ndc-postgres/tests/snapshots/tests__select_order_by_name.snap
---
source: crates/ndc-postgres/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": {
          "value": "A Matter of Life and Death"
        }
      },
      {
        "Title": {
          "value": "A Real Dead One"
        }
      },
      {
        "Title": {
          "value": "A Real Live One"
        }
      },
      {
        "Title": {
          "value": "A Soprano Inspired"
        }
      },
      {
        "Title": {
          "value": "A TempestadeTempestade Ou O Livro Dos Dias"
        }
      }
    ]
  }
]
