crates/ndc-postgres/tests/snapshots/tests__select_where_album_id_less_than.snap
---
source: crates/postgres-multitenant-ndc/tests/tests.rs
expression: result
---
[
  {
    "rows": []
  }
]
