crates/ndc-postgres/tests/snapshots/tests__select_where_album_id_less_than_or_equal_to.snap
---
source: crates/ndc-postgres/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": {
          "value": 1
        },
        "Title": {
          "value": "For Those About To Rock We Salute You"
        }
      }
    ]
  }
]
