crates/ndc-postgres/tests/snapshots/tests__select_where_name_in.snap
---
source: crates/ndc-postgres/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": {
          "value": 346
        },
        "Title": {
          "value": "Mozart: Chamber Music"
        }
      }
    ]
  }
]
